{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 88,
  "lineage": "12b15be1-3f5b-ed27-ff46-eac2755003bd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02a79048f33860acc",
            "arn": "arn:aws:ec2:us-east-1:539935451710:elastic-ip/eipalloc-02a79048f33860acc",
            "association_id": "eipassoc-08422589905352a48",
            "domain": "vpc",
            "id": "eipalloc-02a79048f33860acc",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e0d80d8f64f01410",
            "private_dns": "ip-10-0-0-9.ec2.internal",
            "private_ip": "10.0.0.9",
            "public_dns": "ec2-54-205-60-48.compute-1.amazonaws.com",
            "public_ip": "54.205.60.48",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539935451710:internet-gateway/igw-003df57429d7c46db",
            "id": "igw-003df57429d7c46db",
            "owner_id": "539935451710",
            "tags": {
              "Name": "squad1-eks-internet-gateway"
            },
            "tags_all": {
              "Name": "squad1-eks-internet-gateway"
            },
            "vpc_id": "vpc-0f0def7ad63a412e3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02a79048f33860acc",
            "association_id": "eipassoc-08422589905352a48",
            "connectivity_type": "public",
            "id": "nat-0f513b096d38d75dd",
            "network_interface_id": "eni-0e0d80d8f64f01410",
            "private_ip": "10.0.0.9",
            "public_ip": "54.205.60.48",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-056e6ad63be94f112",
            "tags": {
              "Name": "squad1-eks-nat-gateway"
            },
            "tags_all": {
              "Name": "squad1-eks-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-003df57429d7c46db",
            "id": "r-rtb-06196cf412e4b98d61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06196cf412e4b98d6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539935451710:route-table/rtb-06196cf412e4b98d6",
            "id": "rtb-06196cf412e4b98d6",
            "owner_id": "539935451710",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-003df57429d7c46db",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "squad1-eks-public-route-table"
            },
            "tags_all": {
              "Name": "squad1-eks-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0def7ad63a412e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539935451710:security-group/sg-098adb0209422fc3b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098adb0209422fc3b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20241126084329803200000001",
            "name_prefix": "terraform-",
            "owner_id": "539935451710",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "squad1-eks-cluster-sg"
            },
            "tags_all": {
              "Name": "squad1-eks-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0def7ad63a412e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_worker_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539935451710:security-group/sg-0acdb9ff2be520d4d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0acdb9ff2be520d4d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-098adb0209422fc3b"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20241126084332069000000003",
            "name_prefix": "terraform-",
            "owner_id": "539935451710",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "squad1-eks-worker-nodes-sg"
            },
            "tags_all": {
              "Name": "squad1-eks-worker-nodes-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0def7ad63a412e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539935451710:subnet/subnet-030a119e622d78b68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030a119e622d78b68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "539935451710",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "squad1-eks-private-subnet-0"
            },
            "tags_all": {
              "Name": "squad1-eks-private-subnet-0"
            },
            "vpc_id": "vpc-0f0def7ad63a412e3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539935451710:subnet/subnet-08f7bd4388715c0df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f7bd4388715c0df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "539935451710",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "squad1-eks-private-subnet-1"
            },
            "tags_all": {
              "Name": "squad1-eks-private-subnet-1"
            },
            "vpc_id": "vpc-0f0def7ad63a412e3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539935451710:subnet/subnet-056e6ad63be94f112",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056e6ad63be94f112",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "539935451710",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "squad1-eks-public-subnet-0"
            },
            "tags_all": {
              "Name": "squad1-eks-public-subnet-0"
            },
            "vpc_id": "vpc-0f0def7ad63a412e3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539935451710:subnet/subnet-0a8cd2feba828cfe0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8cd2feba828cfe0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "539935451710",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "squad1-eks-public-subnet-1"
            },
            "tags_all": {
              "Name": "squad1-eks-public-subnet-1"
            },
            "vpc_id": "vpc-0f0def7ad63a412e3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539935451710:vpc/vpc-0f0def7ad63a412e3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09ced6a5e687099fe",
            "default_route_table_id": "rtb-0d027b426bb967d00",
            "default_security_group_id": "sg-07ebb6830d2f7328f",
            "dhcp_options_id": "dopt-09069672",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f0def7ad63a412e3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d027b426bb967d00",
            "owner_id": "539935451710",
            "tags": {
              "Name": "squad1-eks-vpc"
            },
            "tags_all": {
              "Name": "squad1-eks-vpc"
            }
          }
        }
      ]
    }
  ]
}